# PanzaMail

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  README_old.md  README_panza3.md  TEMP_HOW_TO_RUN_INFERENCE.md  USER_STUDY.md  environment.yml  prepare_env.sh  pyproject.toml  setup.py
configs/: base.yaml  panza_finetuning.yaml  panza_preparation.yaml  panza_writer.yaml
configs/finetuning/: base.yaml  full.yaml  rosa.yaml
configs/interfaces/: cli.yaml  gui.yaml  human_eval.yaml  json.yaml  web.yaml
configs/user/: default.yaml  jen.yaml
configs/writer/: email.yaml  summary.yaml
configs/writer/llm/: ollama.yaml  peft.yaml  transformers.yaml
configs/writer/prompting/: email_prompting.yaml  summarization_prompting.yaml
data/: .gitignore  Don_Quijote_Emails.jsonl  david_anonymous_clean.jsonl  fixed_prompts.txt  isabel_anonymous_clean.jsonl  jeff_johnson_clean.jsonl  kay_brown_clean.jsonl  marcus_anonymous_clean.jsonl  shackleton_sara_clean.jsonl  tana_williams_clean.jsonl
generalize/panza/data_preparation/: create_vector_store.py  prepare_raft_emails.py  prepare_raft_texts.py  split_data.py  summarization_prompt.txt  summarize_emails.py
generalize/panza/evaluation/: base_inference.py  console_interactive_inference.py
generalize/panza/finetuning/: preprocessing.py
generalize/panza/utils/: prompting.py
generalize/prompt_preambles/: rag_preamble.txt  system_preamble.txt  user_preamble.txt
generalize/scripts/: config.sh  prepare_dataset.sh  run_panza.sh  run_panza_cli.sh  run_panza_gui.sh  train_fft.sh  train_rosa.sh
gguf/: convert.sh  merge_adapters_bf16.py
notebooks/: panza_colab.ipynb  retrieval.ipynb
prompt_preambles/: README.md  rag_preamble.txt  thread_preamble.txt  user_preamble.txt
scripts/: README.md  config.sh  create_human_eval.sh  eval_base_model.sh  eval_model.sh  eval_rosa.sh  eval_summaries.sh  extract_emails.sh  finetune.py  finetune_simple.py  merge_adapters.py  merge_and_convert_to_gguf.sh  prepare_data.py  prepare_data.sh  prepare_dataset.sh  prepare_train_eval.sh  rosa_to_gptq.sh  run_interactive_cli_inference.sh  run_ollama_services.sh  run_panza_ollama.sh  run_services.sh  runner.py  runner.sh  train_fft.sh  train_rosa.sh
src/panza/: __init__.py  writer.py
src/panza/data_preparation/: create_vector_store.py  extract_emails.py  prepare_raft_emails.py  rag.py  split_data.py  summarize_emails.py
src/panza/entities/: __init__.py  document.py  instruction.py
src/panza/evaluation/: .evaluate_summaries.py.swp  base_inference.py  console_interactive_inference.py  evaluate_bleu_score.py  evaluate_summaries.py  evaluation.py  fixed_prompts.txt  generate_questions.py  gui_inference.py  ollama_inference.py  ollama_service_inference.py  service_inference.py
src/panza/finetuning/: preprocessing.py  rosa_to_gptq.py  train.py
src/panza/llm/: base.py  (+3 more)
src/panza3/: __init__.py  run_panza.py  writer.py
tests/: conftest.py  example_test.py  test_entities.py  test_llm.py  test_local_llm.py  test_ollama_llm.py  test_prompting.py  test_retriever.py  test_writer.py
(+62 files in other folders)
